--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
 	<!--loader-->
-	<!-- <div class="tw-loader">
+	<div class="tw-loader">
 		<div class="preloader-block">
 			<div class="tw-ellipsis">
 				<span class="load-dot load-dot-1"></span>
@@ -69,7 +69,7 @@
 				<span class="load-dot load-dot-4"></span>
 			</div>						
 		</div>						
-  </div> -->
+  </div>
   <!--/loader/-->
 
 		<!--Navbar-->
