--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
             <div class="col-12 col-md-6 col-lg-6">
 							<div class="progress-bar-linear">
-								<p class="progress-bar-text">Abode Photoshop</p>
+								<p class="progress-bar-text">Adobe Photoshop</p>
 								<div class="barfiller html">
 									<div class="tipWrap">
 										<span class="tip"></span>
@@ -279,7 +279,7 @@
             
 						<div class="col-12 col-md-6 col-lg-6">
 							<div class="progress-bar-linear">
-								<p class="progress-bar-text">Abode Illustrator</p>
+								<p class="progress-bar-text">Adobe Illustrator</p>
 								<div class="barfiller php">
 									<div class="tipWrap">
 										<span class="tip"></span>
@@ -303,7 +303,7 @@
             
 						<div class="col-12 col-md-6 col-lg-6">
 							<div class="progress-bar-linear">
-								<p class="progress-bar-text">Abode After Effects</p>
+								<p class="progress-bar-text">Adobe After Effects</p>
 								<div class="barfiller wordpress">
 									<div class="tipWrap">
 										<span class="tip"></span>
